# AdaWave

./: .gitignore  COMMIT_HASH.txt  FREEZE_v2.md  LICENSE  README.md  pyproject.toml  requirements.txt
adawave/: __init__.py  baselines.py  calibration.py  denoise.py  descriptors.py  directional.py  fast_geometry.py  geometry.py  neighbors.py  outlier.py  patch.py  pcg.py  preprocess.py  propagate.py  restoration.py  wavefront_prior.py
configs/: frozen_global.yaml
eval/: ablation_v2.py  downstream_reconstruction.py  eval_datasets.py  eval_paper.py  eval_splits.py  final_test.py  final_test_data.py  freeze_experiments.py  large_scale_tile.py  make_tip_tables.py  paths.py  sensitivity_v2.py  worldA_run.py  worldA_spec.py  worldB_normals.py  worldB_safety.py
protocols/: baseline_settings.md  dev_val_test_split.json  preregistration.md
reference/: frozen_loop_impl.md
scripts/: reproduce_main_figures.sh  reproduce_main_tables.sh  run_final_test.sh  run_large_tile.sh
supplementary/figure_sources/: README.md  sigma_vs_gain.csv
supplementary/raw_csv/: ablation_v2.csv  direction_ablation.csv  downstream_reconstruction.csv  final_test_als.csv  final_test_dl_pathnet_als.csv  final_test_dl_pathnet_mn.csv  final_test_dl_pfn_als.csv  final_test_dl_pfn_mn.csv  final_test_dl_score_als.csv  final_test_dl_score_mn.csv  final_test_dl_straightpcf_als.csv  final_test_dl_straightpcf_mn.csv  final_test_mn.csv  (+28 more)
tests/: test_displacement_certificate.py  test_fast_equivalence.py  test_null_calibration.py  test_scale_equivariance.py  test_wavefront_weight_scale_equivariance.py
