[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adawave"
version = "1.0.0"
description = "Adaptive wavefront-constrained restoration of irregular point clouds"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
# Needed to run the evaluation harness under eval/.
eval = [
    "trimesh>=4.0",
    "plyfile>=1.0",
    "matplotlib>=3.7",
]
# Reconstruction downstream task.
recon = ["pymeshlab"]
# ScanNet++ depth decoding (World B).
scannetpp = ["lz4"]

[tool.setuptools]
packages = ["adawave"]
